--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,4 +59,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
           GITHUB_ACTOR: AyAyEm
           GITHUB_EMAIL: ${{ secrets.EMAIL }}
-          PUBLIC_PATH: https://ayayem.github.io/react-typescript-webpack-template/
+          PUBLIC_URL: https://ayayem.github.io/react-typescript-webpack-template/
